EPNG-11961 Migrate to Spring Boot 3.3.x and JUnit 5